# robodog-ecm

./: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  EXPORT-CONTROL.md  Justfile  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.github/workflows/: casket-pages.yml  codeql.yml  dogfood-gate.yml  e2e.yml  hypatia-scan.yml  mirror.yml  quality.yml
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/svc/: README.adoc
.machines_readable/6scm/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm
.well-known/: security.txt
contractiles/: README.adoc
contractiles/dust/: Dustfile
contractiles/k9/: template-yard.k9.ncl
contractiles/lust/: Intentfile
contractiles/must/: Mustfile
contractiles/trust/: Trustfile.a2ml  run-checks.sh
docs/: architecture.adoc  contributing.adoc  tech-debt-2026-05-26.md  troubleshooting.adoc  usage.adoc
src/rust/: Cargo.toml
src/rust/benches/: ecm_bench.rs
src/rust/src/: lib.rs
src/rust/src/autonomy/: mod.rs
src/rust/src/crypto/: mod.rs
src/rust/src/ecm/: detection.rs  mod.rs  signals.rs
src/rust/src/formation/: mod.rs
src/rust/tests/: aspect.rs  end_to_end.rs  point_to_point.rs  property_test.proptest-regressions  property_test.rs  reflexive_contract_test.rs
(+21 files in other folders)
